# rps

./: .env  Cargo.toml  LICENSE  Rocket.toml  docker-compose.yml
migrations/2022-03-30-180025_add_users/: up.sql
migrations/2022-03-30-202522_add-username/: down.sql  up.sql
migrations/2022-04-01-201653_add-game-table/: down.sql  up.sql
src/: db.rs  db_connection.rs  game.rs  lib.rs  main.rs  management.rs  models.rs  save_game.rs  schema.rs
