[package]
name = "rps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.8", features = ["postgres"] }
dotenv = "0.15.0"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = "1.0.136"
